# supu

./: .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml
.github/workflows/: release.yml  ruff.yml
supu/: dataframes.py  statistics.py
tests/: test_dataframes.py  test_statistics.py
